[package]
name = "circuit_definitions"
version = "0.150.1"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/era-zkevm_test_harness/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
description = "ZKsync Era circuits definitions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snark_wrapper = "=0.1.0"
# snark_wrapper = {path = "../../snark_wrapper"}

circuit_encodings = { version = "0.150.0", path = "../circuit_encodings" }

derivative = "2.2"
serde = {version = "1", features = ["derive"]}
crossbeam = "0.8"
seq-macro = "0.3.5"

[features]
default = []
log_tracing = ["circuit_encodings/log_tracing"]
verbose_circuits = ["circuit_encodings/verbose_circuits"]
